--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://media.istockphoto.com/id/1248295461/vector/dumbbell-icon-design-vector-template.jpg?s=612x612&w=0&k=20&c=P1_gkO6MjcPvhJxrcRSimIgJ2KX3y4VdK8BqJwQIZPk=" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fitness</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
